--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="637128031349-gl6g8jqlavvig7n7rt6qk1ltajer247o.apps.googleusercontent.com">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,6 +23,10 @@
 
 <body>
     <div id="app"></div>
+
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+
     <script src="./src/main.js"></script>
 </body>
 
