--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
 <body>
     <div id="app"></div>
 
+    <script>
+        function onLoad() {
+            gapi.load('auth2', function() {
+                gapi.auth2.init()
+            })
+        }
+    </script>
+
     <!-- Google -->
-    <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=onLoad"></script>
 
     <script src="./src/main.js"></script>
 </body>
