--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Google -->
     <script src="https://apis.google.com/js/platform.js?onload=onLoad"></script>
 
-    <script src="./src/main.js"></script>
+    <script src="src/main.js"></script>
 </body>
 
 </html>
